Bug 99514 - FILEOPEN .xlsm error 37 times: BASIC runtime error. '423' Value2
Summary: FILEOPEN .xlsm error 37 times: BASIC runtime error. '423' Value2
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: filter:xls
Depends on:
Blocks: Macro-VBA-Error423
  Show dependency treegraph
 
Reported: 2016-04-26 14:02 UTC by Bruce Blodgett
Modified: 2022-11-01 17:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Excel file with macros (225.80 KB, application/vnd.ms-excel.sheet.macroEnabled.12)
2016-04-26 14:02 UTC, Bruce Blodgett
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bruce Blodgett 2016-04-26 14:02:45 UTC
Created attachment 124652 [details]
Excel file with macros

When I try to open the attached .xlsm (Excel file with Macros) file, I get this error dialog 37 times:

LibreOffice 5.1.2.2
--------------------
BASIC runtime error.
'423'
Value2
Comment 1 Julien Nabet 2016-04-26 20:23:48 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

It seems "Value2" property for the "Range" object is not implemented (see https://support.microsoft.com/en-us/kb/213719)
Comment 2 Julien Nabet 2016-04-26 20:43:34 UTC
I don't know what the macro does but for the moment,
either you don't need it and you can disable macro or you can replace "Value2" in the Waterfall macro by "Value" to give it a try.

BTW, I don't even know if Range is implemented but I'm just a casual LO contributor, not a dev expert, so...
Comment 3 QA Administrators 2017-05-22 13:22:42 UTC Comment hidden (noise)
Comment 4 Roman Kuznetsov 2019-03-24 13:04:23 UTC
still repro in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 5a907fe76bc628629fddb5501727642468d38dae
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-22_00:18:04
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 6 QA Administrators 2021-08-27 04:05:16 UTC Comment hidden (noise)
Comment 7 Michael Warner 2021-10-03 15:26:17 UTC
No repro in:
Version: 7.2.0.4 (x64) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 6; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2022-06-30 01:36:54 UTC
Hannah Meeks committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cb41db23a044e6e6337bad642aad2c49174aa068

tdf#99514 - implement Value2 for compatibility

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2022-11-01 07:01:20 UTC
No errors any more, so I suppose this can be closed. Thanks for the implementation!