tdf#99514 - implement Value2 for compatibility

Value2 ignores date formatting in a way that Value does not.
Extended vba.xls to test this too.

Change-Id: Id75a3dafae2166221731847b7c81e93e8ad835fe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133645
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>